--- a/lang/en.yml
+++ b/lang/en.yml
@@ -588,7 +588,7 @@ text_issue_category_reassign_to: Reassign issues to this category
 text_user_mail_option: "For unselected projects, you will only receive notifications about things you watch or you're involved in (eg. issues you're the author or assignee)."
 text_no_configuration_data: "Roles, trackers, issue statuses and workflow have not been configured yet.\nIt is highly recommended to load the default configuration. You will be able to modify it once loaded."
 text_load_default_configuration: Load the default configuration
-text_status_changed_by_changeset: Applied in changeset %s.
+text_status_changed_by_changeset: 'This issue was solved with changeset %s. %s, thank you for your reporting of the issue. You have greatfully contributed toward Ruby. May Ruby be with you.'
 text_issues_destroy_confirmation: 'Are you sure you want to delete the selected issue(s) ?'
 text_select_project_modules: 'Select modules to enable for this project:'
 text_default_administrator_account_changed: Default administrator account changed
